unpackaged/main/default/objects/pro_Rebate_Rate__c/pro_Rebate_Rate__c.object-meta.xml
<CustomObject>
    <label>Rebate Rate</label>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Rebate Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>