unpackaged/main/default/objects/pro_Rebate_Rate__c/fields/pro_Range_End__c.field-meta.xml
<CustomField>
    <fullName>pro_Range_End__c</fullName>
    <label>Range End ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>