unpackaged/main/default/objects/pro_Rebate_Rate__c/fields/pro_Range_Start__c.field-meta.xml
<CustomField>
    <fullName>pro_Range_Start__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Range Start ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>