unpackaged/main/default/objects/pro_Rebate_Rate__c/fields/pro_Rebate__c.field-meta.xml
<CustomField>
    <fullName>pro_Rebate__c</fullName>
    <label>Rebate</label>
    <referenceTo>pro_Rebate__c</referenceTo>
    <relationshipLabel>Rebate Rates</relationshipLabel>
    <relationshipName>Rebate_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>