unpackaged/main/default/objects/pro_Rebate_Rate__c/fields/pro_Rebate_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pro_Rebate_Calculation__c</fullName>
    <formula>IF(
    ISPICKVAL(pro_Rebate__r.Calculation_Method__c, &#39;Flat&#39;) &amp;&amp; 
    pro_Rebate__r.pro_Vouchered__c &gt;= pro_Range_Start__c &amp;&amp; 
    pro_Rebate__r.pro_Vouchered__c &lt;= pro_Range_End__c,
    pro_Rebate__r.pro_Vouchered__c * pro_Rebate_Percent__c,
    
    IF(
        ISPICKVAL(pro_Rebate__r.Calculation_Method__c, &#39;Tiered&#39;) &amp;&amp; 
        pro_Rebate__r.pro_Vouchered__c &gt;= pro_Range_Start__c &amp;&amp; 
        pro_Rebate__r.pro_Vouchered__c &lt;= pro_Range_End__c,
        (pro_Rebate__r.pro_Vouchered__c - pro_Range_Start__c) * pro_Rebate_Percent__c,
        
        IF(
            ISPICKVAL(pro_Rebate__r.Calculation_Method__c, &#39;Tiered&#39;) &amp;&amp; 
            pro_Rebate__r.pro_Vouchered__c &gt;= pro_Range_End__c,
            (pro_Range_End__c - pro_Range_Start__c) * pro_Rebate_Percent__c,
            0
        )
    ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate Calculation ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>