unpackaged/main/default/objects/pro_Rebate_Rate__c/fields/pro_Rebate_Calculation_Currency__c.field-meta.xml
<CustomField>
    <fullName>pro_Rebate_Calculation_Currency__c</fullName>
    <label>Rebate Calculation ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>