unpackaged/main/default/objects/pro_Rebate_Rate__c/fields/pro_Rebate_Percent__c.field-meta.xml
<CustomField>
    <fullName>pro_Rebate_Percent__c</fullName>
    <label>Rebate %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>