unpackaged/main/default/objects/pro_Rebate_Rate__c/fields/pro_Vouchered_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Vouchered_Amount__c</fullName>
    <formula>pro_Rebate__r.pro_Vouchered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vouchered Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>