unpackaged/main/default/objects/pro_Rebate_Rate__c/validationRules/Range_End_Greater_Than_Range_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_End_Greater_Than_Range_Start</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(pro_Range_End__c &gt; pro_Range_Start__c)</errorConditionFormula>
    <errorDisplayField>pro_Range_End__c</errorDisplayField>
    <errorMessage>The RangeEnd value must be Greater Than the Range Start value</errorMessage>
</ValidationRule>