unpackaged/main/default/objects/pro_Rebate_Rate__c/validationRules/Range_Start_Less_Than_Range_End.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Start_Less_Than_Range_End</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(pro_Range_Start__c &lt; pro_Range_End__c)</errorConditionFormula>
    <errorDisplayField>pro_Range_Start__c</errorDisplayField>
    <errorMessage>The Range Start value must be Less Than the Range End value</errorMessage>
</ValidationRule>